chore: remove mistakenly committed build artifacts from index
